.devcontainer/test/jinjaboard/errors/macro_error.yaml.j2
cards:
  - type: markdown
    content: "{{ jjb.macros.noop() }}"
